[WFCORE-4001] Eliminating --illegal-access=permit option from WildFly.