@@ -1698,8 +1698,7 @@
             </activation>
             <properties>
                 <modular.jdk.args>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED
-                    --add-modules=java.se
-                    --illegal-access=permit</modular.jdk.args>
+                    --add-modules=java.se</modular.jdk.args>
             </properties>
         </profile>
         <!--
